--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,13 +76,78 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@BOOK{merrit:nuclei,
+       author = {{Merritt}, D.},
+        title = "{Dynamics and Evolution of Galactic Nuclei}",
+         year = 2013,
+        month = jul,
+        pages = {544},
+      address = {Princeton},
+    publisher = {Princeton University Press},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013degn.book.....M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{berentzen:2009,
+       author = {{Berentzen}, I. and {Preto}, M. and {Berczik}, P. and
+         {Merritt}, D. and {Spurzem}, R.},
+        title = "{Binary Black Hole Merger in Galactic Nuclei: Post-Newtonian Simulations}",
+      journal = {ApJ},
+     keywords = {black hole physics, galaxies: evolution, galaxies: interactions, galaxies: kinematics and dynamics, galaxies: nuclei, gravitational waves, Astrophysics},
+         year = "2009",
+        month = Apr,
+       volume = {695},
+       number = {1},
+        pages = {455-468},
+          doi = {10.1088/0004-637X/695/1/455},
+archivePrefix = {arXiv},
+       eprint = {0812.2756},
+ primaryClass = {astro-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2009ApJ...695..455B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{dey:2019,
+       author = {{Dey}, L. and {Gopakumar}, A. and {Valtonen}, M. and
+         {Zola}, S. and {Susobhanan}, A. and {Hudec}, R. and
+         {Pihajoki}, P. and {Pursimo}, T. and {Berdyugin}, A. and
+         {Piirola}, V. and {Ciprini}, S. and {Nilsson}, K. and
+         {Jermak}, H. and {Kidger}, M. and {Komossa}, S.},
+        title = "{The Unique Blazar OJ 287 and Its Massive Binary Black Hole Central Engine}",
+      journal = {Universe},
+     keywords = {Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = "2019",
+        month = may,
+       volume = {5},
+          doi = {10.3390/universe5050108},
+archivePrefix = {arXiv},
+       eprint = {1905.02689},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019Univ....5..108D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{valtonen:1996,
+       author = {{Lehto}, H.~J. and {Valtonen}, M.~J.},
+        title = "{OJ 287 Outburst Structure and a Binary Black Hole Model}",
+      journal = {ApJ},
+     keywords = {ACCRETION, ACCRETION DISKS, BLACK HOLE PHYSICS, GALAXIES: QUASARS: INDIVIDUAL ALPHANUMERIC: OJ 287},
+         year = "1996",
+        month = mar,
+       volume = {460},
+        pages = {207-213},
+          doi = {10.1086/176962},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996ApJ...460..207L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{sesana:2006,
        author = {{Sesana}, A. and {Haardt}, F. and {Madau}, P.},
         title = "{Interaction of Massive Black Hole Binaries with Their Stellar Environment. I. Ejection of Hypervelocity Stars}",
       journal = {ApJ},
      keywords = {Black Hole Physics, Methods: Numerical, Stellar Dynamics, Astrophysics},
          year = "2006",
-        month = "Nov",
+        month = nov,
        volume = {651},
         pages = {392-400},
           doi = {10.1086/507596},
@@ -113,7 +178,7 @@ archivePrefix = {arXiv},
       journal = {MNRAS},
      keywords = {methods: numerical, dark matter, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = "2019",
-        month = "Jul",
+        month = jul,
        volume = {487},
        number = {1},
         pages = {1227-1232},
@@ -297,7 +362,7 @@ archivePrefix = "arXiv",
       journal = {ApJ},
      keywords = {black hole physics, galaxies: evolution, galaxies: nuclei, methods: numerical, stars: kinematics and dynamics, Astrophysics - Astrophysics of Galaxies},
          year = "2017",
-        month = "May",
+        month = may,
        volume = {840},
           doi = {10.3847/1538-4357/aa6d65},
 archivePrefix = {arXiv},
@@ -333,7 +398,7 @@ archivePrefix = {arXiv},
       journal = {ApJ},
      keywords = {black hole physics, galaxies: general, galaxies: nuclei, galaxies: statistics, stellar dynamics, Astrophysics - Galaxy Astrophysics, Astrophysics - Cosmology and Extragalactic Astrophysics},
          year = "2009",
-        month = "Jun",
+        month = jun,
        volume = {698},
         pages = {198--221},
           doi = {10.1088/0004-637X/698/1/198},
@@ -350,7 +415,7 @@ archivePrefix = {arXiv},
       journal = {ApJ},
      keywords = {equation of state, gravitational waves, stars: neutron, Astrophysics - High Energy Astrophysical Phenomena},
          year = "2017",
-        month = "Dec",
+        month = dec,
        volume = {850},
           eid = {L19},
           doi = {10.3847/2041-8213/aa991c},
@@ -367,7 +432,7 @@ archivePrefix = {arXiv},
       journal = {ApJ},
      keywords = {galaxies: individual: NGC 1600, galaxies: kinematics and dynamics, methods: numerical, Astrophysics - Astrophysics of Galaxies},
          year = "2018",
-        month = "Sep",
+        month = sep,
        volume = {864},
           doi = {10.3847/1538-4357/aada47},
 archivePrefix = {arXiv},
@@ -383,7 +448,7 @@ archivePrefix = {arXiv},
       journal = {ApJ},
      keywords = {accretion, accretion disks, black hole physics, gravitational waves, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = "2014",
-        month = "Apr",
+        month = apr,
        volume = {785},
           doi = {10.1088/0004-637X/785/2/115},
 archivePrefix = {arXiv},
@@ -428,7 +493,7 @@ archivePrefix = "arXiv",
       journal = {Science},
      keywords = {ASTRONOMY, Astrophysics},
          year = "2007",
-        month = "Jun",
+        month = jun,
        volume = {316},
           doi = {10.1126/science.1141858},
 archivePrefix = {arXiv},
@@ -460,7 +525,7 @@ archivePrefix = {arXiv},
          year = "2003",
        series = {American Institute of Physics Conference Series},
        volume = {686},
-        month = "Oct",
+        month = oct,
         pages = {201--210},
           doi = {10.1063/1.1629432},
 archivePrefix = {arXiv},
@@ -505,7 +570,7 @@ archivePrefix = {arXiv},
       journal = {New Astronomy},
      keywords = {Astrophysics},
          year = "1996",
-        month = "Jul",
+        month = jul,
        volume = {1},
         pages = {35--56},
           doi = {10.1016/S1384-1076(96)00003-6},
@@ -537,10 +602,10 @@ archivePrefix = {arXiv},
   issue = {4B},
   numpages = {0},
   year = {1964},
-  month = {Nov},
+  month = nov,
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.136.B1224},
-  url = {https://link.aps.org/doi/10.1103/PhysRev.136.B1224}
+  adsurl = {https://link.aps.org/doi/10.1103/PhysRev.136.B1224}
 }
 
 @article{peters-mathews:1963,
@@ -551,10 +616,10 @@ archivePrefix = {arXiv},
   issue = {1},
   numpages = {0},
   year = {1963},
-  month = {Jul},
+  month = jul,
   publisher = {American Physical Society},
   doi = {10.1103/PhysRev.131.435},
-  url = {https://link.aps.org/doi/10.1103/PhysRev.131.435}
+  adsurl = {https://link.aps.org/doi/10.1103/PhysRev.131.435}
 }
 
 @article{will:2014,
@@ -565,10 +630,10 @@ archivePrefix = {arXiv},
   issue = {4},
   numpages = {14},
   year = {2014},
-  month = {Feb},
+  month = feb,
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.89.044043},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.89.044043}
+  adsurl = {https://link.aps.org/doi/10.1103/PhysRevD.89.044043}
 }
 
 @ARTICLE{einstein:1938,
